--- a/1_numpy.ipynb
+++ b/1_numpy.ipynb
@@ -625,18 +625,18 @@
       "metadata": {
         "id": "qDnPpwHIes7W",
         "colab_type": "code",
-        "outputId": "6d17b1a9-e1b2-4544-ef63-1d871017624e",
+        "outputId": "a618225d-a836-4838-f100-244ad6b31ebe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         }
       },
       "source": [
-        "vetor_numpy = np.array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
+        "vetor = np.arange(0, 10)\n",
         "\n",
-        "print(vetor_numpy)"
+        "print(vetor)"
       ],
-      "execution_count": 77,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -669,11 +669,11 @@
         }
       },
       "source": [
-        "vetor_numpy = np.array([0, 2, 4, 6, 8, 10, 12])\n",
+        "vetor = np.array([0, 2, 4, 6, 8, 10, 12])\n",
         "\n",
-        "print(len(vetor_numpy))"
+        "print(len(vetor))"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -699,18 +699,18 @@
       "metadata": {
         "id": "lC6yRs-Jes7c",
         "colab_type": "code",
+        "outputId": "d17017c2-e884-41f8-f9d8-f56cf6403f4b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "f4fe994c-5d6b-40d0-f2a5-1e440dd194ab"
+        }
       },
       "source": [
-        "vetor_numpy = np.array([0, 2, 4, 6, 8, 10, 12])\n",
+        "vetor = np.array([0, 2, 4, 6, 8, 10, 12])\n",
         "\n",
-        "print(vetor_numpy.ndim)"
+        "print(vetor.ndim)"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -736,18 +736,18 @@
       "metadata": {
         "id": "UF3_MCfUes7e",
         "colab_type": "code",
+        "outputId": "a96cdddf-5045-4113-a432-2b59b61c1e34",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "a96cdddf-5045-4113-a432-2b59b61c1e34"
+        }
       },
       "source": [
-        "vetor_numpy = np.array([0, 2, 4, 6, 8, 10, 12])\n",
+        "vetor = np.array([0, 2, 4, 6, 8, 10, 12])\n",
         "\n",
-        "print(vetor_numpy.shape)  # Retorna a forma do vetor ou atribui uma tupla para as dimnesões do vetor"
+        "print(vetor.shape)  # Retorna a forma do vetor ou atribui uma tupla para as dimnesões do vetor"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -783,19 +783,19 @@
       "metadata": {
         "id": "P9NPJ144es7h",
         "colab_type": "code",
+        "outputId": "a02fad41-2090-47ae-ddef-38f17bda5d43",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "480924df-40cc-4ec6-9a01-f821e93ebf8a"
+        }
       },
       "source": [
-        "vetor_numpy = [1, 18, 3, 5, 40, 7, 2, 9, 12]\n",
-        "pares = sorted(filter(lambda x: x % 2 == 0, vetor_numpy))\n",
+        "vetor = [1, 18, 3, 5, 40, 7, 2, 9, 12]\n",
+        "pares = sorted(filter(lambda x: x % 2 == 0, vetor))\n",
         "\n",
         "print(pares)"
       ],
-      "execution_count": 92,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -824,11 +824,11 @@
         "colab": {}
       },
       "source": [
-        "vetor_numpy = [9, 18, 3, 5, 40, 7, 2, 1, 12]\n",
-        "vetor_numpy[impares] = [-1]\n",
-        "impares = sorted(filter(lambda x: x % 2 == 1, vetor_numpy))\n",
+        "vetor = [9, 18, 3, 5, 40, 7, 2, 1, 12]\n",
+        "vetor[impares] = [-1]\n",
+        "impares = sorted(filter(lambda x: x % 2 == 1, vetor))\n",
         "\n",
-        "print(vetor_numpy)"
+        "print(vetor)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -848,19 +848,19 @@
       "metadata": {
         "id": "mR2sZbihes7l",
         "colab_type": "code",
+        "outputId": "4610404d-c638-49b8-db9f-059157e49ced",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "4610404d-c638-49b8-db9f-059157e49ced"
+        }
       },
       "source": [
-        "vetor_numpy = np.array([0, 1, 2, 3, 4, 5, 6, 7])\n",
-        "matriz = vetor_numpy.reshape(4,2)\n",
+        "vetor = np.array([0, 1, 2, 3, 4, 5, 6, 7])\n",
+        "matriz = vetor.reshape(4,2)\n",
         "\n",
         "print(matriz)"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -890,11 +890,11 @@
       "metadata": {
         "id": "-GDyZHfees7o",
         "colab_type": "code",
+        "outputId": "ded73c86-2cdc-4adc-bc07-53638cda1ee4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "ded73c86-2cdc-4adc-bc07-53638cda1ee4"
+        }
       },
       "source": [
         "vetorA = np.array([1, 2, 3, 4, 5, 6])\n",
@@ -904,7 +904,7 @@
         "\n",
         "print(intersecao)"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -931,11 +931,11 @@
       "metadata": {
         "id": "jYF9LPALes7s",
         "colab_type": "code",
+        "outputId": "1a6b305d-f6f3-434f-cf1c-ce22687162e4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "1a6b305d-f6f3-434f-cf1c-ce22687162e4"
+        }
       },
       "source": [
         "vetorA = np.array([1, 2, 3, 4, 8, 6])\n",
@@ -945,7 +945,7 @@
         "\n",
         "print(diferenca)"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -972,11 +972,7 @@
       "metadata": {
         "id": "xZvtnC7ges7u",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "003b3bd3-d744-4f95-d61e-56ce0c00aa9f"
+        "colab": {}
       },
       "source": [
         "vetorA = np.array([1, 2, 3, 4, 8, 6])\n",
@@ -984,16 +980,8 @@
         "\n",
         "print(np.where(vetorA == vetorB))"
       ],
-      "execution_count": 49,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "(array([], dtype=int64),)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1010,18 +998,18 @@
       "metadata": {
         "id": "l1jB0UR3es7w",
         "colab_type": "code",
+        "outputId": "fac89b1c-dc67-4a2b-99e2-3ee909421296",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "fe9d8244-7bbd-41f3-b4a1-171973610c8c"
+        }
       },
       "source": [
-        "vetor = np.array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ,11, 12, 13, 14, 15, 16, 17, 18, 19, 20])\n",
+        "vetor = np.arange(0, 21)\n",
         "\n",
         "print(vetor[5:16])"
       ],
-      "execution_count": 45,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -1047,29 +1035,27 @@
       "metadata": {
         "id": "BMQU3vhPes7y",
         "colab_type": "code",
+        "outputId": "3ca70afe-7a44-41d9-d3ac-a3fc859c96b1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "54e8cc92-64f5-4022-e3b2-202dea73936d"
+        }
       },
       "source": [
-        "import random\n",
-        "\n",
         "vetor = np.arange(6)\n",
         "\n",
         "print(vetor)\n",
-        "print(vetor.max())\n",
-        "print(vetor.min())"
+        "print(\"Maior nº: \", vetor.max())\n",
+        "print(\"Menor nº: \", vetor.min())"
       ],
-      "execution_count": 78,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[0 1 2 3 4 5]\n",
-            "5\n",
-            "0\n"
+            "Maior nº:  5\n",
+            "Menor nº:  0\n"
           ],
           "name": "stdout"
         }
@@ -1096,18 +1082,18 @@
       "metadata": {
         "id": "6YHa8AQEes70",
         "colab_type": "code",
+        "outputId": "0be82d79-74d7-46ec-c66c-0e5f4acc6375",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "5988d845-e883-449e-aa19-fffad6db6966"
+        }
       },
       "source": [
         "matriz = np.empty([3,3], dtype = int)\n",
         "\n",
-        "print(matriz[ : :-1])"
+        "print(matriz[ : : ])"
       ],
-      "execution_count": 85,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1135,15 +1121,29 @@
       "metadata": {
         "id": "JR_K5pAkes73",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "6a32df6a-c4a5-40dd-da33-60baf52b4764",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        }
       },
       "source": [
         "matriz = np.empty([3,3], dtype = int)\n",
         "\n",
-        "print(matriz[1:2])"
+        "print(matriz[0 : 3,2 : ])"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[9]\n",
+            " [6]\n",
+            " [3]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1160,13 +1160,29 @@
       "metadata": {
         "id": "qMUP3KkCes76",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "3628fedd-69c4-4bb3-9cc1-628974566b7e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        }
       },
       "source": [
-        ""
+        "matriz = np.empty([3,3], dtype = int)\n",
+        "\n",
+        "print(matriz[ : :-1])"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[1 2 3]\n",
+            " [4 5 6]\n",
+            " [7 8 9]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1183,29 +1199,31 @@
       "metadata": {
         "id": "UbipZNpbes78",
         "colab_type": "code",
+        "outputId": "fbd3f478-f0fc-434e-fed1-69d568551ff8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 198
-        },
-        "outputId": "a03035d6-d478-4348-ca1a-842d1368e7bc"
+          "height": 136
+        }
       },
       "source": [
-        "matriz = np.array(range(50)).reshape(7,5,5)\n",
+        "matriz = np.arange(35).reshape((7,5))\n",
         "\n",
-        "print('Tensor v = \\n', matriz)"
+        "print(matriz)"
       ],
-      "execution_count": 125,
+      "execution_count": 0,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-125-fe9c631dd346>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmatriz\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Tensor v = \\n'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmatriz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 50 into shape (7,5,5)"
-          ]
+          "output_type": "stream",
+          "text": [
+            "[[ 0  1  2  3  4]\n",
+            " [ 5  6  7  8  9]\n",
+            " [10 11 12 13 14]\n",
+            " [15 16 17 18 19]\n",
+            " [20 21 22 23 24]\n",
+            " [25 26 27 28 29]\n",
+            " [30 31 32 33 34]]\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -1224,18 +1242,18 @@
       "metadata": {
         "id": "RSdLucBOes7-",
         "colab_type": "code",
+        "outputId": "cd0783d6-ffff-4326-fd8d-bd260cbf8957",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "cd0783d6-ffff-4326-fd8d-bd260cbf8957"
+        }
       },
       "source": [
         "matriz = np.empty([3,3], dtype = int)\n",
         "\n",
         "print(len(matriz))"
       ],
-      "execution_count": 110,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1261,18 +1279,18 @@
       "metadata": {
         "id": "bqX19VfKes8A",
         "colab_type": "code",
+        "outputId": "644d6219-0802-4cc4-8bf6-15e09da11bce",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "644d6219-0802-4cc4-8bf6-15e09da11bce"
+        }
       },
       "source": [
         "matriz = np.empty([3,3], dtype = int)\n",
         "\n",
         "print(matriz.ndim)"
       ],
-      "execution_count": 111,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1298,11 +1316,11 @@
       "metadata": {
         "id": "2FosMpM7es8D",
         "colab_type": "code",
+        "outputId": "e48b400b-f778-414d-a3db-c52e5aa8c885",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "e48b400b-f778-414d-a3db-c52e5aa8c885"
+        }
       },
       "source": [
         "# Retorna a forma da matriz ou atribui uma tupla para as suas dimnesões\n",
@@ -1311,7 +1329,7 @@
         "\n",
         "print(matriz.shape)"
       ],
-      "execution_count": 113,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1388,7 +1406,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "import numpy as np"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1414,7 +1432,10 @@
         "colab": {}
       },
       "source": [
-        ""
+        "import csv\n",
+        "from numpy import genfromtxt\n",
+        "dados = np.genfromtxt('fifa.csv', delimiter=',', encoding='utf-8', dtype=object, skip_header=True)\n",
+        "print(dados)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1437,7 +1458,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "print(len(dados))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1460,7 +1481,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "print(n.ndim(dados))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1483,7 +1504,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "print(np.shape(dados)) #retorna a quantidade de colunas"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1516,7 +1537,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "print(dados[2, 3])"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1539,7 +1560,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "print(dados[1])"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1562,7 +1583,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "print(dados[:5])"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1585,7 +1606,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "print(dados[:,1])"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1608,7 +1629,9 @@
         "colab": {}
       },
       "source": [
-        ""
+        "idade = np.array(dados[:, 2], dtype=int)\n",
+        "\n",
+        "print(idade)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1631,7 +1654,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "print(idades.mean())"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1654,7 +1677,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "print(idades.max())"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1677,7 +1700,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "print(idades.min())"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1700,7 +1723,11 @@
         "colab": {}
       },
       "source": [
-        ""
+        "maior_idade = idade.max()\n",
+        "condicao = dados[:, 2].astype(int) == maior_idade\n",
+        "\n",
+        "print(dados[condicao, :])\n",
+        "print(len(dados[condicao, :]))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1723,7 +1750,9 @@
         "colab": {}
       },
       "source": [
-        ""
+        "menor_idade = idade.min()\n",
+        "condicao = dados[:, 2].astype(int) == menor_idade\n",
+        "print(dados[condicao, :])"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1746,7 +1775,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "condicao = dados[:, 3] = b'Brasil'"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1769,7 +1798,9 @@
         "colab": {}
       },
       "source": [
-        ""
+        "dados_brasil = dados[condicao, :]\n",
+        "print(dados_brasil)\n",
+        "print(len(dados_brasil))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1796,7 +1827,13 @@
         "colab": {}
       },
       "source": [
-        ""
+        "altura = dados[:, 9].astype(float)\n",
+        "altura.mean()\n",
+        "condicao_vazia = dados[:, 10] != b''\n",
+        "peso = dados[condicao_vazia, 10].astype(float)\n",
+        "peso.mean()\n",
+        "print(altura, peso)\n",
+        "print(getattr(head())"
       ],
       "execution_count": 0,
       "outputs": []
